--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-RPC_URL=https://arb1.arbitrum.io/rpc
+ARBITRUM_RPC_URL=https://arb1.arbitrum.io/rpc
+AVALANCHE_RPC_URL=https://api.avax.network/ext/bc/C/rpc
